@@ -36,6 +36,7 @@
      <ant dir="index-replace" target="deploy"/>
      <ant dir="index-static" target="deploy"/>
      <ant dir="index-metadata" target="deploy"/>
+     <ant dir="index-links" target="deploy"/>
      <ant dir="mimetype-filter" target="deploy"/>
      <ant dir="indexer-cloudsearch" target="deploy"/>
      <ant dir="indexer-dummy" target="deploy"/>
@@ -98,6 +99,7 @@
      <ant dir="index-more" target="test"/>
      <ant dir="index-static" target="test"/>
      <ant dir="index-replace" target="test"/>
+     <ant dir="index-links" target="test"/>
      <ant dir="mimetype-filter" target="test"/>
      <ant dir="language-identifier" target="test"/>
      <ant dir="lib-http" target="test"/>
@@ -143,6 +145,7 @@
     <ant dir="index-static" target="clean"/>
     <ant dir="index-replace" target="clean"/>
     <ant dir="index-metadata" target="clean"/>
+    <ant dir="index-links" target="clean"/>
     <ant dir="mimetype-filter" target="clean"/>
     <ant dir="indexer-cloudsearch" target="clean"/>
     <ant dir="indexer-dummy" target="clean"/>
