@@ -2,6 +2,8 @@ Nutch Change Log
    
 Nutch Current Development 1.11-SNAPSHOT
 
+* NUTCH-2139 Basic plugin to index inlinks and outlinks (jorgelbg)
+
 * NUTCH-2136 Implement a different version of Naive Bayes Parse Filter (Asitang Mishra)
 
 * NUTCH-2109 Create a brute force click-all-ajax-links utility fucntion for selenium interactive plugin (Asitang Mishra)
